<resources>
    <string name="facebook_app_id">235763394234913</string>
    <string name="fb_login_protocol_scheme">0d1cb6b45462c64cee28cbb275b7172c</string>
    <string name="com.twitter.sdk.android.CONSUMER_KEY">XnSbA5ptLFQPHD1x5tROiCRHo</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">j8cHkhx2deVhj7W3LulrwmOiLCl19FDBVDMpWx0iLeuJOPxmmJ</string>
    <string name="app_name">U-Robot</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Логин</string>
    <string name="hint_phone">Телефон</string>
    <string name="hint_token">Токен</string>
    <string name="hint_code">Код</string>
    <string name="prompt_forgot_email">Введите e-mail адрес</string>
    <string name="prompt_password">Пароль</string>
    <string name="prompt_name">Имя</string>
    <string name="prompt_lastname">Фамилия</string>
    <string name="action_sign_in">Войти</string>
    <string name="action_send_phone">Получить код</string>
    <string name="action_send_token">Подключить бота</string>
    <string name="action_add_bot">Создать</string>
    <string name="action_sign_up">Создать</string>
    <string name="action_promo">Подарить другу</string>
    <string name="hint_name_calendar">Название календаря</string>
    <string name="hint_name_payment">Название оплаты</string>
    <string name="hint_name_bot">Название робота</string>
    <string name="hint_description_bot">Напишите приветственное сообщене</string>
    <string name="hint_description">Описание</string>
    <string name="hint_phone_bot">Телефон</string>
    <string name="text_bot_description">Введите номер к которому будет привязан робот, на этот номер придет смс с кодом подтверждения</string>
    <string name="action_service_calendar">Онлайн запись</string>
    <string name="action_service_payment">Оплата</string>
    <string name="action_service_payment_custom">Оплата на р/с</string>
    <string name="action_service_new_lewel">Кнопка</string>
    <string name="title_create_calendar">Добавление календаря</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid email</string>
    <string name="invalid_password">Password must be >1 characters</string>
    <string name="invalid_name">Name must be >1 characters</string>
    <string name="invalid_lastname">Last name must be >1 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="signUp_success">"На указанный e-mail отправлено письмо со ссылкой для активации"</string>
    <string name="forgotPass_success">"На указанный e-mail отправлено письмо со ссылкой для восстановления пароля"</string>
    <string name="forgotPass_error">"Не верный e-mail"</string>
    <string name="support">"Поддержка"</string>
    <string name="title_activity_tutorial">TutorialActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_fragment_3">Оплата прямо в чате с клиентом</string>
    <string name="title_fragment_2">Подходит для любой сферы</string>
    <string name="title_fragment_1">Все сообщения в одном приложении</string>
    <string name="button_skip">ПРОПУСТИТЬ</string>
    <string name="button_create_acc">СОЗДАТЬ КАБИНЕТ</string>
    <string name="button_forgot_pass">Забыли пароль?</string>
    <string name="text_login">Войти через</string>
    <string name="title_activity_promo">PromoActivity</string>
    <string name="title_activity_main_chat">MainChatActivity</string>
    <string name="title_bot">U-Robot</string>
    <string name="title_chats">Чаты</string>
    <string name="title_contacts">Контакты и подписчики</string>
    <string name="contacts">Контакты</string>
    <string name="title_settings">Настройки</string>
    <string name="text_forgot_pass">Необходимо ввести e-mail который был указан во время регистрации</string>
    <string name="text_add_messenger">Введите номер к которому привязан мессенджер, на этот номер придет смс с кодом подтверждения</string>
    <string name="action_forgot_pass">Сбросить пароль</string>
    <string name="tabs_robots">Мои роботы</string>
    <string name="tabs_scripts">Мои сервисы</string>
    <string name="bottom_title">Сервисы</string>
    <string name="work_day">Рабочие дни</string>
    <string name="work_time">Время работы</string>
    <string name="delete">Удалить</string>
    <string name="text_resend_code">Если смс c кодом подтверждения не придет в течении 5 минут, запросите код повтоно</string>
    <string name="payment">Оплата</string>
    <string name="write_event_and_important">Запись</string>
    <string name="level_one">1 уровень</string>
    <string name="add_buttons">Добавить кнопки</string>
    <string name="write_event">Запись</string>
    <string name="action">Действие</string>
    <string name="save">Сохранить</string>
    <string name="add_event_button">Добавить</string>
    <string name="pause">Перерыв</string>
    <string name="session_time">Длительность сеанса</string>
    <string name="hint_number_card">Номер карты</string>
    <string name="price_number_card">Сумма для оплаты</string>
    <string name="hint_owner_card">Фамилия Имя (как на карте)</string>
    <string name="period">Срок Действия</string>
    <string name="start_bot">Запустить</string>
    <string name="tabs_my_contacts">Контакты</string>
    <string name="tabs_server_contacts">Подписчики</string>
    <string name="material_calendar_todaaqdescriptionn"></string>
    <string name="material_calendar_positive_button">OK</string>
    <string name="material_calendar_negative_button">Отмена</string>
    <string name="update_button">ОБНОВИТЬ</string>
    <string name="send_message_button">НАПИСАТЬ</string>
    <string name="industry">Индустрии</string>
    <string name="default_notification_channel_id">0</string>
    <string name="add_messenger">Привязать мессенджер</string>
    <string name="create">Создать</string>
    <string name="token">Токен</string>
    <string name="code">Код</string>
    <string name="faqtitle1">Что такое U-robot?</string>
    <string name="faqtitle2">Как создать своего робота?</string>
    <string name="faqtitle3">Какие мессенджеры и социальные сети можно подключить в приложении?</string>
    <string name="faqtitle4">Какие сервисы можно подключить в приложении U-Robot?</string>
    <string name="faqtitle5">Как создать календарь для Онлайн-записи?</string>
    <string name="faqtitle6"> Как подключить Оплату в чат с клиентом?</string>
    <string name="faqtitle7">Раздел “Чаты”</string>
    <string name="faqtitle8">Раздел “Настройки”</string>
    <string name="faqtitle9">Раздел “Подписчики”</string>
    <string name="faqtitle10">Раздел “Контакты”</string>
    <string name="faqtitle11">Партнерская сеть U-Robot</string>
    <string name="faqtitle15">Terms of use</string>
    <string name="faqtitle16">Privacy Policy</string>
    <string name="n_level">%s Уровень</string>
    <string name="level1_description">: Приветствие</string>
    <string name="level2_description">: Основное меню</string>
    <string name="promocode">Вы можете использовать этот промокод для U-Robot: </string>
    <string name="faqdescription1">Это первая мобильная платформа для создания чатботов. Теперь любой желающий, не обладая специальными навыками сможет создать и подключить персонального робота в любой мессенджер или социальную сеть.</string>
    <string name="faqdescription2">Зайдите в главное меню и нажмите кнопку “Создать”. \n
        - Введите название вашего робота и дайте краткое описание - информацию, которая может быть полезна вашим клиентам. \n
        - Нажмите кнопку “Создать”. Перед вами откроется новое окно, где в дальнейшем будет отображаться весь сценарий диалога с роботом. \n
        - Первый уровень - это приветственное сообщение робота. Для создания сценария разговора добавляйте варианты взаимодействия клиента с роботом.\n
        - Для того чтобы продолжить сценарий необходимо нажать “Добавить” и выбрать “Кнопка” или “Сервис”\n
        - Добавляя кнопку, вам нужно ввести ее название. Она появится на следующем уровне. Перейдя на этот уровень вы сможете добавить описание к созданной кнопке. \n
        \n
        Например: Я хочу чтобы мои клиенты могли узнать адрес. Для этого,  на первом уровне добавляю кнопку и даю ей название “Адрес”. В общем окне на втором уровне появляется карточка “Адрес”. Чтобы клиент мог получить информацию, нажав на кнопку “Адрес”, мне необходимо заполнить эту карточку, указав там необходимую информацию о местонахождении. \n

        - Подключайте сервисы - онлайн-запись и возможность оплаты ваших товаров или услуг внутри чата.  \n
        - Создавайте неограниченное количество кнопок и давайте любую информацию, которая может быть полезна вашим клиентам. \n
        - Привязывайте мессенджеры, в которых вы обычно общаетесь с клиентами. Робот будет отвечать на все однотипные вопросы, вести онлайн-запись и принимать оплату без вашего участия!

</string>
    <string name="faqdescription3">На данный момент U-Robot поддерживает:
        - WhatsApp \n
        - Telegram \n
        - Viber \n
        - Facebook Messenger \n
        - Instagram Direct \n
        - ВКонтакте \n
</string>
    <string name="faqdescription4">В приложении U-Robot есть 2 вида сервиса:\n
\n

        - Оплата \n
Вы можете подключить к роботу оплату картой или другими удобными способами — клиент сам будет выбирать, как ему удобнее совершить оплату.
\n
\n
        - Онлайн-запись \n
Подключайте календари для онлайн записи. Робот будет предлагать клиенту свободные дни и время и автоматически передавать вам всю информацию.
</string>
    <string name="faqdescription5">На главном экране нажимаете на кнопку  “U-Robot”\n
        - Далее - вкладка “Сервис” - “Онлайн-запись” - “Создать”\n
        - Введите название сервиса\n
        - Отметьте рабочие дни, часы работы, перерывы, длительность сеансов сервиса\n
        - Нажмите “Создать”, чтобы сохранить изменения.\n
</string>
    <string name="faqdescription6">На главном экране нажимаете на кнопку  “U-Robot”\n
        - Далее - вкладка “Сервис” - “Оплата” - “Добавить” \n
        - Введите название сервиса оплаты\n
        - Добавьте номер карты, на которую вы будете принимать платежи клиентов\n
        - Введите данные с карты\n
        - И далее кнопку “Создать”, чтобы сохранить изменения\n
</string>
    <string name="faqdescription7">В этом разделе вы можете видеть и отвечать на все сообщения, которые пользователи присылают в мессенджерах и социальных сетях вашим ботам.
</string>
    <string name="faqdescription8">В этом разделе вы можете добавить информацию о себе, привязать мессенджеры, узнать ответы на самые частые вопросы, ввести промокод, узнать о тарифах и сервисах.
</string>
    <string name="faqdescription9">В этом разделе вы можете увидеть информацию о тех клиентах, которые подписались на ваших ботов в мессенджерах и социальных сетях
</string>
    <string name="faqdescription10">В этом разделе вы можете увидеть свои контакты, которые были синхронизированы из мессенджеров и социальных сетей.
</string>
    <string name="faqdescription11">U-Robot предлагает вам возможность использования реферальной программы для еще большей выгоды. \n
\n
Вы приглашаете пользователей через свою реферальную ссылку и получаете 20% с каждого клиента, который оплатит подписку в течении первого года использования.\n
\n
Пользователь, который воспользовался вашей ссылкой, получает 500 бонусных рублей, которые можно потратить при оплате подписки.\n
\n
Ваша ссылка:\n
</string>
    <string name="faqdescription15"></string>
    <string name="off">отключить</string>
    <string name="on">подключить</string>
    <string name="title_1c">Интеграция с 1C</string>
    <string name="title_amo">Интеграция с Amo CRM</string>
    <string name="content">Введите текст сообщения</string>
</resources>