<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.support.SupportFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="top"
            android:orientation="vertical"
            android:paddingTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:padding="24dp"
                android:text="@string/faqtitle1"
                android:textColor="@color/black_text"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:padding="24dp"
                android:text="@string/faqtitle2"
                android:textColor="@color/black_text"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:padding="24dp"
                android:text="@string/faqtitle3"
                android:textColor="@color/black_text"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:padding="24dp"
                android:text="@string/faqtitle4"
                android:textColor="@color/black_text"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:padding="24dp"
                android:text="@string/faqtitle5"
                android:textColor="@color/black_text"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:padding="24dp"
                android:text="@string/faqtitle6"
                android:textColor="@color/black_text"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:padding="24dp"
                android:text="@string/faqtitle7"
                android:textColor="@color/black_text"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:padding="24dp"
                android:text="@string/faqtitle8"
                android:textColor="@color/black_text"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:padding="24dp"
                android:text="@string/faqtitle9"
                android:textColor="@color/black_text"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:padding="24dp"
                android:text="@string/faqtitle10"
                android:textColor="@color/black_text"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:padding="24dp"
                android:text="@string/faqtitle11"
                android:textColor="@color/black_text"
                android:textSize="20sp" />

            <!--            <TextView-->
            <!--                android:id="@+id/textView12"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:background="?selectableItemBackground"-->
            <!--                android:clickable="true"-->
            <!--                android:focusable="true"-->
            <!--                android:padding="24dp"-->
            <!--                android:text="@string/faqtitle12"-->
            <!--                android:textColor="@color/black_text"-->
            <!--                android:textSize="20sp" />-->

            <!--            <TextView-->
            <!--                android:id="@+id/textView13"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:background="?selectableItemBackground"-->
            <!--                android:clickable="true"-->
            <!--                android:focusable="true"-->
            <!--                android:padding="24dp"-->
            <!--                android:text="@string/faqtitle13"-->
            <!--                android:textColor="@color/black_text"-->
            <!--                android:textSize="20sp" />-->

            <!--            <TextView-->
            <!--                android:id="@+id/textView14"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:background="?selectableItemBackground"-->
            <!--                android:clickable="true"-->
            <!--                android:focusable="true"-->
            <!--                android:padding="24dp"-->
            <!--                android:text="@string/faqtitle14"-->
            <!--                android:textColor="@color/black_text"-->
            <!--                android:textSize="20sp" />-->

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:padding="24dp"
                android:text="@string/faqtitle15"
                android:textColor="@color/black_text"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:padding="24dp"
                android:text="@string/faqtitle16"
                android:textColor="@color/black_text"
                android:textSize="20sp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>
