<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomSheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="@android:color/white"
    app:behavior_hideable="true"
    app:behavior_peekHeight="140dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <TextView
        android:id="@+id/titile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bottom_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black_text"
        android:paddingBottom="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/calendarButton"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:background="@drawable/button_rounded_with_border_background"
        android:text="@string/action_service_calendar"
        android:textColor="@color/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titile" />

    <Button
        android:id="@+id/paymentButton"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_below="@+id/calendarButton"
        android:background="@drawable/button_rounded_with_border_background"
        android:text="@string/action_service_payment"
        android:textColor="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@+id/calendarButton" />

    <Button
        android:id="@+id/paymentCustomButton"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_below="@+id/paymentButton"
        android:background="@drawable/button_rounded_with_border_background"
        android:text="@string/action_service_payment_custom"
        android:textColor="@color/colorAccent"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/paymentButton" />


</androidx.constraintlayout.widget.ConstraintLayout>
